--- a/BattleTank/Config/DefaultInput.ini
+++ b/BattleTank/Config/DefaultInput.ini
@@ -74,7 +74,11 @@ DefaultViewportMouseLockMode=LockOnCapture
 -AxisMappings=(AxisName="Left Track Throttle",Key=Gamepad_LeftTriggerAxis,Scale=1.000000)
 -AxisMappings=(AxisName="Right Track Throttle",Key=Gamepad_RightTriggerAxis,Scale=1.000000)
 -AxisMappings=(AxisName="Left Track Throttle",Key=Gamepad_LeftShoulder,Scale=-0.500000)
--AxisMappings=(AxisName="Right Track Throttle",Key=Gamepad_RightShoulder,Scale=1.000000)
+-AxisMappings=(AxisName="Right Track Throttle",Key=Gamepad_RightShoulder,Scale=-0.500000)
+-AxisMappings=(AxisName="Move Foward",Key=Gamepad_LeftStick_Up,Scale=1.000000)
+-AxisMappings=(AxisName="Move BackWard",Key=Gamepad_LeftStick_Down,Scale=-1.000000)
+-AxisMappings=(AxisName="Move Left",Key=Gamepad_LeftStick_Left,Scale=1.000000)
+-AxisMappings=(AxisName="Move Right",Key=Gamepad_LeftStick_Right,Scale=1.000000)
 +AxisMappings=(AxisName="AimAzimuth",Key=MouseX,Scale=1.000000)
 +AxisMappings=(AxisName="AimElevation",Key=MouseY,Scale=1.000000)
 +AxisMappings=(AxisName="AimAzimuth",Key=Gamepad_RightX,Scale=1.000000)
@@ -83,6 +87,10 @@ DefaultViewportMouseLockMode=LockOnCapture
 +AxisMappings=(AxisName="Right Track Throttle",Key=Gamepad_RightTriggerAxis,Scale=1.000000)
 +AxisMappings=(AxisName="Left Track Throttle",Key=Gamepad_LeftShoulder,Scale=-0.500000)
 +AxisMappings=(AxisName="Right Track Throttle",Key=Gamepad_RightShoulder,Scale=-0.500000)
++AxisMappings=(AxisName="Move Foward",Key=Gamepad_LeftStick_Up,Scale=1.000000)
++AxisMappings=(AxisName="Move BackWard",Key=Gamepad_LeftStick_Down,Scale=1.000000)
++AxisMappings=(AxisName="Move Left",Key=Gamepad_LeftStick_Left,Scale=1.000000)
++AxisMappings=(AxisName="Move Right",Key=Gamepad_LeftStick_Right,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
