AI movement complete

--- a/BattleTank/Config/DefaultGame.ini
+++ b/BattleTank/Config/DefaultGame.ini
@@ -1,2 +1,4 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=01FC1ADA4867814F59910CBDB272E6EE
+CopyrightNotice=Copyright FTO Consulting Ltd
+
